force-app/main/default/objects/Product_Request__c/Product_Request__c.object-meta.xml
<CustomObject>
    <description>Used for Avenger Protein</description>
    <label>New Product Collection Form</label>
    <nameField>
        <label>Product Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Product Collection Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>