force-app/main/default/objects/Product_Request__c/fields/Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume__c</fullName>
    <inlineHelpText>Annual Volume is a mandatory field. Users must either provide a valid value in Annual Volume field or in the Monthly Seasonal Distribution fields. Summation of the Monthly Seasonal Distribution is updated automatically by the system in Annual Volume.</inlineHelpText>
    <label>* Annual Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>