force-app/main/default/objects/Product_Request__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>