force-app/main/default/objects/Product_Request__c/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Business Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>