force-app/main/default/objects/Product_Request__c/fields/Current_Cargill_Capability__c.field-meta.xml
<CustomField>
    <fullName>Current_Cargill_Capability__c</fullName>
    <label>Current Cargill Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>