force-app/main/default/objects/Product_Request__c/fields/Current_Case_net_Weight_in_pounds__c.field-meta.xml
<CustomField>
    <fullName>Current_Case_net_Weight_in_pounds__c</fullName>
    <label>Current Case net Weight in pounds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>