force-app/main/default/objects/Product_Request__c/fields/Customer_s_Expected_Go_to_Market_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Expected_Go_to_Market_Date__c</fullName>
    <label>Customer&#39;s Expected Go to Market Date</label>
    <type>Date</type>
</CustomField>