force-app/main/default/objects/Product_Request__c/fields/Date_First_Sample_Delivered_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Sample_Delivered_to_Customer__c</fullName>
    <label>Date First Sample Delivered to Customer</label>
    <type>Date</type>
</CustomField>