force-app/main/default/objects/Product_Request__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <label>December</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>