force-app/main/default/objects/Product_Request__c/fields/Delivery_City_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City_State_or_Province__c</fullName>
    <label>Delivery City, State or Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>