force-app/main/default/objects/Product_Request__c/fields/Domestic_Export__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Export__c</fullName>
    <label>Domestic / Export</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>