force-app/main/default/objects/Product_Request__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <label>February</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>