force-app/main/default/objects/Product_Request__c/fields/Functional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Functional_Requirements__c</fullName>
    <label>Functional Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>