force-app/main/default/objects/Product_Request__c/fields/How_is_the_product_made_today__c.field-meta.xml
<CustomField>
    <fullName>How_is_the_product_made_today__c</fullName>
    <label>How is the product made today?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>