force-app/main/default/objects/Product_Request__c/fields/If_BM_is_the_running_user__c.field-meta.xml
<CustomField>
    <fullName>If_BM_is_the_running_user__c</fullName>
    <formula>IF(Business_Manager__c = $User.Id,True,False)</formula>
    <label>If BM is the running user?</label>
    <type>Checkbox</type>
</CustomField>