force-app/main/default/objects/Product_Request__c/fields/Inner_Package_net_wt_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Inner_Package_net_wt_if_applicable__c</fullName>
    <label>Inner Package net wt. if applicable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>