force-app/main/default/objects/Product_Request__c/fields/Intended_Use_Application_of_Item__c.field-meta.xml
<CustomField>
    <fullName>Intended_Use_Application_of_Item__c</fullName>
    <label>Intended Use /Application of Item</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>