force-app/main/default/objects/Product_Request__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <label>January</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>