force-app/main/default/objects/Product_Request__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <label>July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>