force-app/main/default/objects/Product_Request__c/fields/Made_to_Ship_Order__c.field-meta.xml
<CustomField>
    <fullName>Made_to_Ship_Order__c</fullName>
    <label>Made to Ship / Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>