force-app/main/default/objects/Product_Request__c/fields/Market_Channel__c.field-meta.xml
<CustomField>
    <fullName>Market_Channel__c</fullName>
    <label>Market Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protein Ingredient</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>