force-app/main/default/objects/Product_Request__c/fields/Minimum_Shelf_Life_on_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Shelf_Life_on_Delivery__c</fullName>
    <label>Minimum Shelf Life on Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>