force-app/main/default/objects/Product_Request__c/fields/Number_of_Suppliers_Producing_the_Item__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Suppliers_Producing_the_Item__c</fullName>
    <label>Number of Suppliers Producing the Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>