force-app/main/default/objects/Product_Request__c/fields/Order_Size__c.field-meta.xml
<CustomField>
    <fullName>Order_Size__c</fullName>
    <label>Order Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>