force-app/main/default/objects/Product_Request__c/fields/Ownership_of_Formula__c.field-meta.xml
<CustomField>
    <fullName>Ownership_of_Formula__c</fullName>
    <label>Ownership of Formula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cargill</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>