force-app/main/default/objects/Product_Request__c/fields/Package_Format__c.field-meta.xml
<CustomField>
    <fullName>Package_Format__c</fullName>
    <label>Package Format</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag in Combo</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bags in Box</fullName>
            </value>
            <value>
                <fullName>Chub Clear</fullName>
            </value>
            <value>
                <fullName>Chub Pre-Printed</fullName>
            </value>
            <value>
                <fullName>Kit (combination of different packaging formats per unit)</fullName>
            </value>
            <value>
                <fullName>MAP Tray Lid stock Hi Ox</fullName>
            </value>
            <value>
                <fullName>MAP Tray Low Ox</fullName>
            </value>
            <value>
                <fullName>Overwrap Hi Ox</fullName>
            </value>
            <value>
                <fullName>Overwrap Low Ox</fullName>
            </value>
            <value>
                <fullName>Sliced Semi Rigid Tray</fullName>
            </value>
            <value>
                <fullName>VSP tray</fullName>
            </value>
            <value>
                <fullName>Tray Overwrap</fullName>
            </value>
            <value>
                <fullName>Vacuum Preprinted film</fullName>
            </value>
            <value>
                <fullName>Vacuum Clear Film</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>