force-app/main/default/objects/Product_Request__c/fields/Preprinted_Box__c.field-meta.xml
<CustomField>
    <fullName>Preprinted_Box__c</fullName>
    <label>Preprinted Box?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>