force-app/main/default/objects/Product_Request__c/fields/Price_Range_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Price_Range_Maximum__c</fullName>
    <label>* Price Range Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>