force-app/main/default/objects/Product_Request__c/fields/Price_Range_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Price_Range_Minimum__c</fullName>
    <label>* Price Range Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>