force-app/main/default/objects/Product_Request__c/fields/Pricing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Due_Date__c</fullName>
    <description>Pricing Due Date</description>
    <label>Pricing Due Date</label>
    <type>Date</type>
</CustomField>