force-app/main/default/objects/Product_Request__c/fields/Pricing_FOB_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Pricing_FOB_Delivered__c</fullName>
    <label>Pricing FOB Delivered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>FOB Delivered</fullName>
                <isActive>false</isActive>
                <label>FOB Delivered</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
                <isActive>false</isActive>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>