force-app/main/default/objects/Product_Request__c/fields/Pricing_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notification_Date__c</fullName>
    <description>Pricing Notification Date</description>
    <label>Date Price Requested</label>
    <type>Date</type>
</CustomField>