force-app/main/default/objects/Product_Request__c/fields/Pricing_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Timeframe__c</fullName>
    <label>Pricing Timeframe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>