force-app/main/default/objects/Product_Request__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baked Egg Patty</fullName>
            </value>
            <value>
                <fullName>BTFT</fullName>
            </value>
            <value>
                <fullName>Continuous Cooked Meatballs</fullName>
            </value>
            <value>
                <fullName>Continuous Cooked Patties/Other</fullName>
            </value>
            <value>
                <fullName>Diced Eggs</fullName>
            </value>
            <value>
                <fullName>Diced Meat</fullName>
            </value>
            <value>
                <fullName>Egg Wrap</fullName>
            </value>
            <value>
                <fullName>Extruded</fullName>
            </value>
            <value>
                <fullName>French Toast</fullName>
            </value>
            <value>
                <fullName>Frittata</fullName>
            </value>
            <value>
                <fullName>Fry Line</fullName>
            </value>
            <value>
                <fullName>FTB</fullName>
            </value>
            <value>
                <fullName>Grilled Egg Patty</fullName>
            </value>
            <value>
                <fullName>Ground Beef</fullName>
            </value>
            <value>
                <fullName>GTFC</fullName>
            </value>
            <value>
                <fullName>GTFP</fullName>
            </value>
            <value>
                <fullName>Hard Cooked Eggs</fullName>
            </value>
            <value>
                <fullName>Hot Dogs (PI)</fullName>
            </value>
            <value>
                <fullName>Kettles</fullName>
            </value>
            <value>
                <fullName>Liquid Eggs</fullName>
            </value>
            <value>
                <fullName>Logs (PI)</fullName>
            </value>
            <value>
                <fullName>MST</fullName>
            </value>
            <value>
                <fullName>Omelets</fullName>
            </value>
            <value>
                <fullName>Pepperoni/Dry-Cured Sausage</fullName>
            </value>
            <value>
                <fullName>Precooked Scrambled Eggs</fullName>
            </value>
            <value>
                <fullName>Primary Beef</fullName>
            </value>
            <value>
                <fullName>Sliced (PI)</fullName>
            </value>
            <value>
                <fullName>Squared Eggs</fullName>
            </value>
            <value>
                <fullName>Wings</fullName>
            </value>
            <value>
                <fullName>Bacon wrapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>