force-app/main/default/objects/Product_Request__c/fields/Reason_for_No_Price__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_No_Price__c</fullName>
    <inlineHelpText>Users must provide a valid reason for not filling up prices in any of the above 3 Price fields (Price Range Maximum, Price Range Minimum and Suggested Retail Price)</inlineHelpText>
    <label>* Reason for No Price</label>
    <type>TextArea</type>
</CustomField>