force-app/main/default/objects/Product_Request__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Ask</fullName>
            </value>
            <value>
                <fullName>Product Match</fullName>
            </value>
            <value>
                <fullName>Market Need</fullName>
            </value>
            <value>
                <fullName>Lost Supplier</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>