force-app/main/default/objects/Product_Request__c/fields/Religious_or_Label_Claims_Required__c.field-meta.xml
<CustomField>
    <fullName>Religious_or_Label_Claims_Required__c</fullName>
    <label>Religious or Label Claims Required (ie.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>