force-app/main/default/objects/Product_Request__c/fields/Seasonal_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal Distribution</label>
    <type>Checkbox</type>
</CustomField>