force-app/main/default/objects/Product_Request__c/fields/Sent_to_Pricer__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Pricer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sent to Pricer</description>
    <label>Sent to Pricer</label>
    <type>Checkbox</type>
</CustomField>