force-app/main/default/objects/Product_Request__c/fields/Similar_Product__c.field-meta.xml
<CustomField>
    <fullName>Similar_Product__c</fullName>
    <label>Similar Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>