force-app/main/default/objects/Product_Request__c/fields/Suggested_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Retail_Price__c</fullName>
    <label>* Suggested Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>