force-app/main/default/objects/Product_Request__c/fields/Timeline_Description__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Description__c</fullName>
    <label>Timeline Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>