force-app/main/default/objects/Product_Request__c/fields/Total_Shelf_Life_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Shelf_Life_in_Days__c</fullName>
    <label>Total Shelf Life in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>