force-app/main/default/objects/Product_Request__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pound (lb)</fullName>
                <default>true</default>
                <label>Pound (lb)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>