force-app/main/default/objects/Product_Request__c/fields/Vacuum_or_Gas_Flush__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_or_Gas_Flush__c</fullName>
    <label>Vacuum or Gas Flush?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacuum</fullName>
            </value>
            <value>
                <fullName>Gas Flush</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>