force-app/main/default/objects/Product_Request__c/fields/What_is_the_Ask__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Ask__c</fullName>
    <label>What is the Ask</label>
    <type>TextArea</type>
</CustomField>