force-app/main/default/objects/Product_Request__c/listViews/My_Assigned_Product_Requests.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Product_Requests</fullName>
    <columns>NAME</columns>
    <columns>Business_Manager__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Annual_Volume__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>If_BM_is_the_running_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Assigned Product Requests</label>
</ListView>