force-app/main/default/objects/Product_Request__c/listViews/My_Created_Product_Requests.listView-meta.xml
<ListView>
    <fullName>My_Created_Product_Requests</fullName>
    <columns>NAME</columns>
    <columns>Business_Manager__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Volume__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Created Product Requests</label>
    <language>en_US</language>
</ListView>